# cache_mrc

./: Cargo.toml  config.toml
data/: cloud.csv  convert.py  convert.sh  gen.py  mooncake.csv  output.csv  test.csv
src/: config.rs  draw.rs  main.rs  minisim.rs  shards.rs
src/evict_policy/: fifo_policy.rs  lfu_policy.rs  lru_policy.rs  mod.rs  twoq_policy.rs
