[package]
name = "cache_mrc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
clap = { version = "4.2.7", features = ["derive"] }
csv = "1.3.0"
hashbrown = "0.14.5"
lru = "0.12.3"
minitrace = { version = "0.6", features = ["enable"] }
log = "0.4.22"
tracing = "0.1"
tracing-subscriber = "0.3.0"
gnuplot = "0.0.43"
fasthash = "0.4.0"
